# npa-howtopay-app

./: .gitignore  README.md  justfile  manifest.json  pyproject.toml  requirements.txt
npa_howtopay_app/: app.py  ratelimit.py  styles.css
npa_howtopay_app/data/: sample.yaml  sample_2.yaml  test.yaml  test_kiki.yaml
npa_howtopay_app/modules/: config.py  input_mappings.py  plotting.py
npa_howtopay_app/rsconnect-python/: npa_howtopay_app.json
